src/components/navigation/navigation.less
@import '../../styles/variables';

.navigation {
	text-decoration: none;
	text-transform: uppercase;
	letter-spacing: .480em;
	font-size: 14px;	
	color:inherit;	



	&.nav-header {
		border-top: none;
		margin-bottom: 100px;
	}
	&.nav-footer {
		border-bottom: none;
		margin-bottom: 0px;
		margin-top: 100px;
	}

	&.navbar-default {
		background-color: white;
		.header {
			color: @header-color;
		}		
	}
	.navbar-nav > li > a {
		padding : 5px;
	}	
	.glyphicon {
		transition: all 0.5s;
		font-size: 20px;
		line-height: 30px;		
	}

	@media all and (max-width:375px){
		.header {
			font-size:17px;
		}
	}
	.navbar-toggle {
		// display: none;
	}
}




// .navigation {

// 	// position: fixed;
// 	top:0px;
// 	z-index:1;
// 	font-family: 'Didact Gothic',sans-serif;

// 	width: 100%;	
// 	padding: 12px;
// 	background-color: fade(white, 95);
// 	// border-bottom: 1px solid #CCC;	
// 	// margin-bottom: 100px;
// 	font-weight: 400;	
// 	// text-align: center;

// 	text-decoration: none;
// 	text-transform: uppercase;
// 	letter-spacing: .480em;
// 	font-size: 14px;	
// 	color:inherit;	

// 	.navigation-header {
// 		text-align: left;
// 	}
// }


// .navigation-item {

//     position: relative;    
// 	margin: 0px 15px;			
// 	cursor:pointer;
	
// 	padding-bottom: 5px;
	
// 	transition: color 0.3s;

// 	.underline-container {

// 	    position: absolute;
// 	    left: -2px;
// 	    bottom:0px;
// 	    width: 100%;		
// 		height: 3px;
	        

// 	    .underline {
// 	    	width: 0%;
// 	    	height:1px;
// 	    	background-color: black;
// 	    	margin: 3px auto;
// 	    	transition: width 0.2s;
// 	    }
// 	}

// 	&:hover, &:focus {
// 		text-decoration: none;
// 		.underline {
// 			width:100%;
// 		}		
// 	}

// 	&.active {
// 		.underline {
// 			width:100%;			
// 		}
// 	}


// }

